--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+    <%= content_tag(:div, flash[:error], :id => "flash_error") if flash[:error] %>
+    <%= content_tag(:div, flash[:notice], :id => "flash_notice") if flash[:notice] %>
+    <%= content_tag(:div, flash[:alert], :id => "flash_alert") if flash[:alert] %>
+    <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+    <% end %>
     <%= yield %>
+    
+    <%= link_to("Home", '/') %>
+    <%= link_to("Sign in", '/') %>
+    <%= link_to("Sign up", '/') %>
+    <%= link_to("Sign out", '/') %>
   </body>
 </html>
